--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MealerProject</string>
     <string name="welcome_msg">Welcome! You are logged in as: %1$s</string>
+    <string name="cook_status_msg">Your account status is: %1$s</string>
 </resources>
